fix volume mounting

--- a/instructions.Rmd
+++ b/instructions.Rmd
@@ -7,9 +7,9 @@ output:
     toc_float: true
 ---
 
-*Last updated: January 21, 2025*
+*Note: Please do not merge your downloaded data back into this repository.*
 
-*Jump to [Quickstart](#quickstart)*
+**Jump to [Quickstart](#quickstart)**
 
 # What is Docker?
 
@@ -65,26 +65,44 @@ Because Docker containers are ephemeral, any data inside of the container will b
 
 To run the container, type:
 
-`docker run --rm -ti ec R`
+`docker run --rm -ti -p 8787:8787 -v /Users/sct2td/Desktop/docker/data:/home/rstudio/data ec`
 
-You should now be inside the new container and using the R language, as opposed to bash. To confirm this, you should see something like:
+But replace `/Users/sct2td/Desktop/` with the location where you cloned this repo. 
 
-> R version 4.4.2 (2024-10-31) -- "Pile of Leaves"
->
-> Copyright (C) 2024 The R Foundation for Statistical Computing
->
-> Platform: x86_64-pc-linux-gnu
+## Step 4: Open the RStudio Image in a Browser 
 
-(Or whatever the most recent version of R is)
+After you run the command above, you will see a temporary password printed in the terminal. This is your one-time login password for using RStudio in the browser. Each time you launch a new RStudio window you'll need a new password. 
 
-## Step 4: Load the R libraries
+Open up a browser, and in the URL field type:
 
-You have now switched from bash to R. This lets you run the familiar `library()` command from R so that you can install the two R packages you need: `rJava` and `tabulapdf`.
+`localhost:8787`
 
-To load and install the packages type the code below. Note this will take a few minutes to download.
+You will be sent to a login screen. The username is rstudio (all lowercase) and the password is the password you retrieved in Step 3. 
+
+Once you type in the user name and password, the familar RStudio IDE will be available in your browser. 
+
+## Step 5: Load the R Libraries
+
+In the browser-based RStudio IDE load the `rJava` and `tabulapdf` libraries by typing the code below. Note this will take a few minutes to download.
 
 ```{r, eval=FALSE}
 library(rJava)
 install.packages("tabulapdf")
 library(tabulapdf)
 ```
+
+## Step 6: Extract Data
+
+Still in the browser-based RStudio IDE, use the instructions from the [`tabulapdf` documentation](https://docs.ropensci.org/tabulapdf/articles/tabulapdf.html) or another PDF scraper, to extract the data you need. Don't worry about tidying it too much, you'll be able to do this step in your local RStudio instance. The goal here is to get the data out of the PDF and stored locally, not to tidy, analyze, or model it. 
+
+## Step 7: Save It 
+
+Now that you have a data object, still in the browser-based IDE, save that in the `docker/data` folder. This is a temporary location that you will then access from your local RStudio instance. *Please do not merge this data back into the original Equity Center docker repository.*
+
+## Step 8: Access Locally 
+
+Navigate back to your local RStudio instance. You should now see your saved data object in the `docker/data/` folder. Since this is still a temporary location, move this data to the directory you would like to save it in. For example, if I'm looking at eviction data from court records, and I extract a file called `filings.csv` I would then move that file out of the `docker/data/` directory and into my `evictions/data/` directory or RStudio Project. 
+
+Now that your data is extracted and saved locally, it's ready to be tidied and analyzed. 
+
+Happy Dockering! 
